--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,14 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+@import '//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css';
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+@import 'egov_utils/bootstrap_variables';
+
+@import 'bootstrap';
+@import 'azahara_schema/schema_options';
+@import 'egov_utils/egov_utils';
